added new tps display
